fix navigation mobile

--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -40,4 +40,5 @@
 
 .Logo {
   height: 11%;
+  margin-bottom: 32px;
 }
